--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="manifest" href="/manifest.webmanifest">
   <title>Pattern Studio</title>
 </head>
 <body>
